...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.SelecteAddressFragment"
    android:id="@+id/background_view"
    android:background="@color/black_50"
    >

        <LinearLayout
            android:id="@+id/address_card_view"
            android:background="@drawable/view_card_style"
            android:layout_width="match_parent"
...

            <LinearLayout
                android:id="@+id/address_ll_view"
                android:orientation="vertical"
                android:layout_width="match_parent"
...
                    />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/address_et"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
            </LinearLayout>
            <LinearLayout
                android:id="@+id/group1_ll"
                android:orientation="horizontal"
                android:layout_width="match_parent"
...
                >
                <LinearLayout
                    android:id="@+id/longitude_ll"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
...
                        />
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/longitude_et"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/width_ll"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
...
                        />
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/width_et"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/height_ll"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
...
                        />
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/height_et"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
...
            </LinearLayout>
            <LinearLayout
                android:id="@+id/group2_ll"
                android:orientation="horizontal"
                android:layout_width="match_parent"
...
                >
                <LinearLayout
                    android:id="@+id/flat_ll"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
...
                        />
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/flat_et"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/entrance_ll"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
...
                        />
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/entrance_et"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
...
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/floor_ll"
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
...
                        />
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/floor_et"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
...

            <LinearLayout
                android:id="@+id/intercom_ll_view"
                android:orientation="vertical"
                android:layout_width="match_parent"
...
                    />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/intercom_et"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...
                    />
                <Switch
                    android:id="@+id/save_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/address_continue_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
...
