...
            android:textColor="@color/Caption"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/et_style_selector"
            android:layout_marginTop="20dp"
            android:hint="Имя"
            android:textColor="@color/black"
            android:paddingHorizontal="16dp"
            />

        <EditText
            android:id="@+id/et_middlename"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/et_style_selector"
            android:layout_marginTop="20dp"
            android:hint="Отчество"
            android:textColor="@color/black"
            android:paddingHorizontal="16dp"
            />

        <EditText
            android:id="@+id/et_lastname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/et_style_selector"
            android:layout_marginTop="20dp"
            android:hint="Фамилия"
            android:textColor="@color/black"
            android:paddingHorizontal="16dp"
            />
        <EditText
            android:id="@+id/et_birthday"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/et_style_selector"
            android:layout_marginTop="20dp"
            android:hint="Дата рождения"
            android:textColor="@color/black"
            android:paddingHorizontal="16dp"
            android:inputType="date"
            />

        <Spinner
            android:id="@+id/floor_s"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/et_style_selector"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="16dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_selector_style"
            android:text="Создать"
            android:textSize="17sp"
...
