...
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_button" />

            <LinearLayout
                android:id="@+id/address_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
...
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
...
                tools:itemCount="3"
                app:reverseLayout="true"
                app:stackFromEnd="true"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_patient_button"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/btn_white_style"
                android:text="Добавить еще пациента"
...
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"

                />

            <LinearLayout
                android:id="@+id/phone_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="42dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/comments_ll"
...
                        android:textSize="16sp"
                        android:gravity="center_vertical"
                        android:textColor="@color/black"
                        android:backgroundTint="@color/Input_BG"
                        />
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="55dp"
                        android:backgroundTint="@color/Input_BG"
                        android:textSize="16sp"
                        android:padding="12dp"
                        android:paddingStart="4dp"
...
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/continue_place_order_button"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/btn_selector_style"
                    android:text="Заказать"
...
