...
    android:id="@+id/background_view"
    android:background="@color/black_50"
    tools:context=".view.fragments.AddPatientFragment">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/white"
            android:background="@drawable/view_card_style"
            >
...
                android:layout_marginTop="20dp"
                android:layout_marginStart="16dp"
                />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/patient_select_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text1_view3"
                android:layout_marginTop="32dp"
                android:maxHeight="500dp"
                >
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/patients_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:scrollbars="none"
                    android:overScrollMode="never"
                    tools:listitem="@layout/view_add_patient"
...
                style="?android:attr/borderlessButtonStyle"
                android:textAllCaps="false"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/profile_continue_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="42dp"
                android:background="@drawable/btn_selector_style"
                android:text="Продолжить"
                android:textSize="17sp"
...
